--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>The Hike</title>
+    <meta name="theme-color" content="#000000" />
+    <title>Dishes Generator</title>
   </head>
   <body>
     <div id="root"></div>
